lostCTRL/force-app/main/default/objects/NewMovie__c/NewMovie__c.object-meta.xml
<CustomObject>
    <label>NewMovie</label>
    <nameField>
        <label>NewMovie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewMovie</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>