lostCTRL/force-app/main/default/objects/NewMovie__c/fields/ContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionId__c</fullName>
    <label>ContentVersionId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>